fix: material: overflow: hidden

--- a/material/material.scss
+++ b/material/material.scss
@@ -12,6 +12,7 @@
   position: relative;
   min-height: 3em;
   padding-top: 1em;
+  overflow: hidden;
 }
 
 .elab:hover,
